--- a/app - copia/pubspec.yaml
+++ b/app - copia/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   http: ^0.13.3
 
 
-
+  shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
   firebase_core: ^3.7.0
   firebase_auth: ^5.3.2
